# mina-testing

./: README.md
proof-systems/: Cargo.toml
proof-systems/src/: main.rs
snarkyjs/: package-lock.json  package.json
snarkyjs/src/: index.ts
